--- a/index.html
+++ b/index.html
@@ -14,6 +14,52 @@
     <h1>blue</h1>
     
 
+    <footer class="p-5 $blue-100">
+        <div class="container row">
+          <div class="col-12 col-md">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mb-2" role="img" viewBox="0 0 24 24"><title>Product</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg>
+            <small class="d-block mb-3 text-muted">&copy; 2017–2021</small>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Features</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="link-dark" href="#">Cool stuff</a></li>
+              <li><a class="link-dark" href="#">Random feature</a></li>
+              <li><a class="link-dark" href="#">Team feature</a></li>
+              <li><a class="link-dark" href="#">Stuff for developers</a></li>
+              <li><a class="link-dark" href="#">Another one</a></li>
+              <li><a class="link-dark" href="#">Last time</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Resources</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="link-dark" href="#">Resource name</a></li>
+              <li><a class="link-dark" href="#">Resource</a></li>
+              <li><a class="link-dark" href="#">Another resource</a></li>
+              <li><a class="link-dark" href="#">Final resource</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Resources</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="link-dark" href="#">Business</a></li>
+              <li><a class="link-dark" href="#">Education</a></li>
+              <li><a class="link-dark" href="#">Government</a></li>
+              <li><a class="link-dark" href="#">Gaming</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>About</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="link-dark" href="#">Team</a></li>
+              <li><a class="link-dark" href="#">Locations</a></li>
+              <li><a class="link-dark" href="#">Privacy</a></li>
+              <li><a class="link-dark" href="#">Terms</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
