add mergin top_main_topics kinjo6回目

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <h1>blue</h1>
         <main>
-            <section class="top_topics">
+            <section class="top_topics mb-5">
                 <div class="container d-flex">
                     <div class="bg-primary me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
                         <div class="my-3 py-3">
@@ -25,14 +25,14 @@
                     <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
                         <div class="my-3 p-3">
                           <h2 class="display-5">見出しタイトル</h2>
-                          <p class="lead">iPhone14　Pro</p>
+                          <p class="lead">iPhone14 Pro</p>
                         </div>
                         <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
                       </div>
                     <div class="bg-primary me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
                         <div class="my-3 py-3">
                             <h2 class="display-5">見出しタイトル</h2>
-                            <p class="lead">iPhone14 Pro MaxPro Max</p>
+                            <p class="lead">iPhone14 Pro Max</p>
                         </div>
                         <div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
                     </div>
